fixes styles of "last updated" (wrong position) + improve style

--- a/content/assets/stylesheets/stylesheet.scss
+++ b/content/assets/stylesheets/stylesheet.scss
@@ -1,5 +1,5 @@
 ---
-version: 47
+version: 48
 ---
 
 @import "variables";
@@ -362,12 +362,14 @@ li {
 
   .breadcrumbs {
     font-style: italic;
-
-    .last-updated {
-      color: $color-light-gray;
-      font-size: 13px;
-    }
   }
+}
+
+.last-updated {
+  color: $color-light-gray;
+  font-size: 13px;
+  padding-bottom: 10px;
+  text-align: right;
 }
 
 .btn-tanuki {
